--- a/index.html
+++ b/index.html
@@ -112,9 +112,26 @@
             <svg id="nodelink">
             </svg>
           </div>
-          <div class="col-6 outer" id="scatterFrame">
-            <svg id="scatter">
-            </svg>
+          <div class="col-6 outer mt-2" id="scatterFrame">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="scatter-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="true">Scatter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="multiple-tab" data-toggle="tab" href="#smallMultipleDiv" role="tab" aria-controls="smallMultipleDiv" aria-selected="false">Line</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="scatterPlot" role="tabpanel" aria-labelledby="home-tab">
+                <svg id="scatter">
+                </svg>
+              </div>
+              <div class="tab-pane fade" id="smallMultipleDiv" role="tabpanel" aria-labelledby="profile-tab">
+                <svg id="smallMultiple">
+                </svg>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
