--- a/index.html
+++ b/index.html
@@ -8,20 +8,37 @@
   <meta name="author" content="Liwenhan Xie">
   <link rel="icon" type="image/png" href="./lib/fig/vis-nodelink.png" />
   <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./lib/css/mdb.min.css">
   <link rel="stylesheet" href="./lib/css/bootstrap.min.css">
   <link rel="stylesheet" href="./lib/css/font-awesome.css">
-  <!-- <link rel="stylesheet" href="./lib/css/mdb.min.css"> -->
 </head>
 
 <body>
-  <script src="./lib/js/networkcube.min.js"></script>
+  <script src="./lib/js/networkcube.js"></script>
+  <script>
+  const domain = window.location.host
+  const dataFolder = 'data'
+  const session = 'demo'
+  let params = networkcube.getUrlVars()
+  if(!params['datasetName']) window.location.href =`http://${domain}/?session=demo&datasetName=scientists`
+  </script>
   <script type="module" src="./src/js/main.js"></script>
   <script src="./lib/js/jquery-3.4.1.min.js"></script>
   <script src="./lib/js/popper.min.js"></script>
   <script src="./lib/js/d3.v5.min.js"></script>
+  <script src="./lib/js/d3-lasso.min.js"></script>
   <script src="./lib/js/bootstrap.min.js"></script>
   <script src="./lib/js/mdb.min.js"></script>
+
+
+
   <div class="container m-0 p-0 wrapper" id="interface">
+    <div class="pollSlider">
+      <div id="config-style" class="m-2">
+      </div>
+
+    </div>
+    <div id="pollSlider-button"><i class="fas fa-sliders-h"></i></div>
     <div class="row m-0 p-0 wrapper">
       <div class="col-2">
         <div id="logo">
@@ -30,6 +47,7 @@
               <img src="./lib/fig/logo-networkcube.png" alt="logo" width="100%" height="100%">
             </figure>
           </a>
+
         </div>
         <div id="data_selection">
           <div class="row wrapper">
@@ -37,7 +55,7 @@
               Dataset:
             </div>
             <div class="dropdown">
-              <button class="btn btn-light btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button class="btn btn-light btn-sm dropdown-toggle z-depth-0 p-1 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 scientists
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -58,55 +76,23 @@
               <input type="text" class="form-control" placeholder="Press Enter" aria-label="search" aria-describedby="basic-addon" id="searchBar">
             </div>
           </div>
-          <div id="config-scatter" class="config">
-            <div class="form-group container m-0 p-0">
-              <div class="row p-0">
-                <div class="col-3 m-0">
-                  <label for="granularity">Gran.</label>
-                </div>
-                <div class="col m-0">
-                  <select class="form-control form-control-sm" id="granularity">
-                  </select>
-                </div>
-              </div>
-            </div>
-            <div class="form-group container m-0">
-              <div class="row p-0">
-                <div class="col-1 m-0 p-0">
-                  <label for="xaxis">X</label>
-                </div>
-                <div class="col m-0 p-0">
-                  <select class="form-control form-control-sm" id="xaxis">
-                  </select>
-                </div>
-              </div>
-            </div>
-            <div class="form-group container m-0">
-              <div class="row">
-                <div class="col-1 m-0 p-0">
-                  <label for="axis">Y</label>
-                </div>
-                <div class="col m-0 p-0">
-                  <select class="form-control form-control-sm" id="yaxis">
-                  </select>
-                </div>
-              </div>
-            </div>
-            <p id="selectedNodeList" style="font-size: 0.8rem">Selected Nodes:</p>
-            <div style="text-align: center;">
-              <button type="button" class="btn btn-outline-info btn-sm" id="launchScatter">Compare!</button>
-            </div>
-          </div>
-          <div id="config-style" class="mt-2">
+          <div id="selection-config" class="config">
           </div>
 
         </div>
+        <div id="statFrame">
+        </div>
       </div>
       <div class="col wrapper">
+        <div id="boxFrame">
+        </div>
         <div id="timesliderFrame">
         </div>
-        <div id="timelineFrame">
-        </div>
+
+          <div class="scrollbar scrollbar-sunny-morning thin" id="timelineFrame">
+  <div class="force-overflow"></div>
+</div>
+
         <div class="row wrapper">
           <div class="col-6" id="nodelinkFrame">
             <svg id="nodelink">
@@ -115,14 +101,73 @@
           <div class="col-6 outer mt-2" id="scatterFrame">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
-                <a class="nav-link active" id="scatter-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="true">Scatter</a>
+                <a class="nav-link active" id="scatter-config-tab" data-toggle="tab" href="#radarPlotDiv" role="tab" aria-controls="radarPlotDiv" aria-selected="true">Subgraph</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="scatter-config-tab" data-toggle="tab" href="#scatterConfigDiv" role="tab" aria-controls="scatterConfigDiv" aria-selected="false">Config</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="scatter-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="false">Scatter</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="multiple-tab" data-toggle="tab" href="#smallMultipleDiv" role="tab" aria-controls="smallMultipleDiv" aria-selected="false">Line</a>
               </li>
             </ul>
+
             <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="scatterPlot" role="tabpanel" aria-labelledby="home-tab">
+              <div class="tab-pane fade show active" id="radarPlotDiv" role="tabpanel" aria-labelledby="home-tab">
+                <div class="row">
+                  <div class="col-9 mt-2" id="radarDiv">
+                    <svg id="radar">
+                    </svg>
+                  </div>
+               <div id="radarLegendDiv" class="col-3 p-0">
+                 <svg id="radarLegend"></svg>
+               </div>
+                </div>
+              </div>
+              <div class="tab-pane fade" id="scatterConfigDiv" role="tabpanel" aria-labelledby="profile-tab">
+                <div id="config-scatter" class="config p-4">
+                  <div class="form-group container m-0 p-0">
+                    <div class="row p-0">
+                      <div class="col-3 m-0">
+                        <label for="granularity">Gran.</label>
+                      </div>
+                      <div class="col-4 m-0">
+                        <select class="form-control form-control-sm" id="granularity">
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group container m-0">
+                    <div class="row p-0">
+                      <div class="col-1 m-0 p-0">
+                        <label for="xaxis">X</label>
+                      </div>
+                      <div class="col-5 m-0 p-0">
+                        <select class="form-control form-control-sm" id="xaxis">
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group container m-0">
+                    <div class="row">
+                      <div class="col-1 m-0 p-0">
+                        <label for="axis">Y</label>
+                      </div>
+                      <div class="col-5 m-0 p-0">
+                        <select class="form-control form-control-sm" id="yaxis">
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <p id="selectedNodeList" style="font-size: 1rem">Selected Nodes: &nbsp</p>
+                  <div style="text-align: center;">
+                    <button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="launchScatter">Compare!</button>
+                  </div>
+                </div>
+              </div>
+              <div class="tab-pane fade" id="scatterPlot" role="tabpanel" aria-labelledby="profile-tab">
                 <svg id="scatter">
                 </svg>
               </div>
@@ -137,9 +182,22 @@
       </div>
     </div>
   </div>
-  <script>
 
-  </script>
 </body>
+<script>
+$(document).ready(function() {
+  let slider_width = $('.pollSlider').width()//get width automaticly
+  $('#pollSlider-button').click(function() {
+      if ($(this).css("margin-left") == slider_width+"px" && !$(this).is(':animated')) {
+          $('.pollSlider,#pollSlider-button').animate({"margin-left": '-='+slider_width})
+      }
+      else {
+        if (!$(this).is(':animated')) {
+          $('.pollSlider,#pollSlider-button').animate({"margin-left": '+='+slider_width})
+        }
+      }
+  })
+})
+</script>
 
 </html>
