--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
   <meta name="author" content="Liwenhan Xie">
   <link rel="icon" type="image/png" href="./lib/fig/vis-nodelink.png" />
   <link rel="stylesheet" href="./src/css/main.css">
-    <link rel="stylesheet" href="./lib/css/mdb.min.css">
+  <link rel="stylesheet" href="./lib/css/mdb.min.css">
   <link rel="stylesheet" href="./lib/css/bootstrap.min.css">
   <link rel="stylesheet" href="./lib/css/font-awesome.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
   <script src="./lib/js/networkcube.js"></script>
   <script>
-  const domain = `${window.location.origin}${window.location.pathname}`
-  const dataFolder = 'data'
-  const session = 'demo'
-  let params = networkcube.getUrlVars()
-  if(!params['datasetName']) window.location.href =`${domain}?session=demo&datasetName=scientists`
+    const domain = `${window.location.origin}${window.location.pathname}`
+    const dataFolder = 'data'
+    const session = 'demo'
+    console.log('loading data: url', domain, dataFolder)
+    let params = networkcube.getUrlVars()
+    if (!params['datasetName']) window.location.href = `${domain}?session=demo&datasetName=scientists`
   </script>
   <script type="module" src="./src/js/main.js"></script>
   <script src="./lib/js/jquery-3.4.1.min.js"></script>
@@ -33,7 +35,21 @@
 
 
   <div class="container m-0 p-0 wrapper" id="interface">
-    <div class="pollSlider">
+    <div class="pollSlider" id="styleConfigDiv">
+      <div id="data_selection" class="m-4">
+        <div class="row wrapper">
+          <div class="col-5 wrapper">
+            Dataset:
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-light btn-sm dropdown-toggle z-depth-0 p-1 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Select...
+            </button>
+            <div id="dataset-selection" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            </div>
+          </div>
+        </div>
+      </div>
       <div id="config-style" class="m-4">
       </div>
       <div id="config-view" class="m-4">
@@ -41,169 +57,184 @@
       <div id="config-localMeasure" class="m-4">
       </div>
     </div>
-    <div id="pollSlider-button"><i class="fas fa-sliders-h"></i></div>
-    <div class="row m-0 p-0 wrapper">
-      <div class="col-2">
-        <div id="logo">
-          <a href="http://vistorian.net/">
-            <figure>
-              <img src="./lib/fig/logo-networkcube.png" alt="logo" width="100%" height="100%">
-            </figure>
-          </a>
+    <div class="pollSlider" id="selectionConfigDiv">
+      <div class="m-2">
+      <div id="logo">
+        <a href="http://vistorian.net/">
+          <figure>
+            <img src="./lib/fig/logo-networkcube.png" alt="logo" width="100%" height="100%">
+          </figure>
+        </a>
 
-        </div>
-        <div id="data_selection">
-          <div class="row wrapper">
-            <div class="col-5 wrapper">
-              Dataset:
-            </div>
-            <div class="dropdown">
-              <button class="btn btn-light btn-sm dropdown-toggle z-depth-0 p-1 m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Select...
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="/?session=demo&datasetName=marieboucher">Marie Boucher</a>
-                <a class="dropdown-item" href="/?session=demo&datasetName=scientists">Scientists</a>
-                <a class="dropdown-item" href="/?session=demo&datasetName=DiplomaticExchange">Diplomatic Exchange</a>
-                <a class="dropdown-item" href="#">link-tables</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="configuration">
-          <div id="cofig-search">
-            <div class="input-group mb-3 mt-3 input-group-sm">
-              <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon" on><i class="fa fa-search"></i></span>
-              </div>
-              <input type="text" class="form-control" placeholder="Press Enter" aria-label="search" aria-describedby="basic-addon" id="searchBar">
-            </div>
-          </div>
-          <div id="selection-config" class="config">
-          </div>
+      </div>
 
+      <div id="configuration">
+        <div id="cofig-search">
+          <div class="input-group mb-3 mt-3 input-group-sm">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon" on><i class="fa fa-search"></i></span>
+            </div>
+            <input type="text" class="form-control" placeholder="Press Enter" aria-label="search" aria-describedby="basic-addon" id="searchBar">
+          </div>
         </div>
-        <div id="statFrame">
+        <div id="selection-config" class="config">
         </div>
       </div>
-      <div class="col wrapper">
-        <div id="boxFrame">
-        </div>
+</div>
+    </div>
+    <div id="pollSlider-button"><i class="fas fa-sliders-h"></i></div>
+    <div id="pollSlider-button-selection"> <i class="fas fa-user-friends"></i></div>
+    <div class="row m-0 p-0 wrapper">
+      <!-- <div class="col-2">
+
+      </div> -->
+      <div class="col-8 wrapper">
         <div id="timesliderFrame">
         </div>
+        <!-- <div class="scrollbar scrollbar-sunny-morning thin" id="measureFrame"> -->
+        <div id="measureFrame">
+        </div>
+        <!-- <div id="boxFrame">
+        </div> -->
 
-          <div class="scrollbar scrollbar-sunny-morning thin" id="timelineFrame">
-  <div class="force-overflow"></div>
+
+        <!-- <div class="scrollbar scrollbar-sunny-morning thin" id="timelineFrame"> -->
+        <!-- <div id="kdeFrame"></div> -->
+        <div class="force-overflow"></div>
+      </div>
+
+      <div class="row wrapper">
+
+
+      </div>
+
+    <div class="col wrapper">
+      <div class="p-0 m-0" id="nodelinkFrame">
+        <svg id="nodelink">
+        </svg>
+      </div>
+      <div class="outer mt-2" id="scatterFrame">
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="scatter-config-tab" data-toggle="tab" href="#radarPlotDiv" role="tab" aria-controls="radarPlotDiv" aria-selected="true">Subgraph</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="scatter-config-tab" data-toggle="tab" href="#scatterConfigDiv" role="tab" aria-controls="scatterConfigDiv" aria-selected="false">Config</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="scatter-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="false">Scatter</a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" id="multiple-tab" data-toggle="tab" href="#smallMultipleDiv" role="tab" aria-controls="smallMultipleDiv" aria-selected="false">Line</a>
+            </li> -->
+          </ul>
+
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="radarPlotDiv" role="tabpanel" aria-labelledby="home-tab">
+              <div class="row">
+                <div class="col-12 mt-2" id="radarDiv">
+                  <div class="custom-control custom-switch ml-2">
+  <input type="checkbox" class="custom-control-input" id="groupMeasure">
+  <label class="custom-control-label" for="groupMeasure">Launch</label>
 </div>
-
-        <div class="row wrapper">
-          <div class="col-6" id="nodelinkFrame">
-            <svg id="nodelink">
-            </svg>
-          </div>
-          <div class="col-6 outer mt-2" id="scatterFrame">
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="scatter-config-tab" data-toggle="tab" href="#radarPlotDiv" role="tab" aria-controls="radarPlotDiv" aria-selected="true">Subgraph</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="scatter-config-tab" data-toggle="tab" href="#scatterConfigDiv" role="tab" aria-controls="scatterConfigDiv" aria-selected="false">Config</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="scatter-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="false">Scatter</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="multiple-tab" data-toggle="tab" href="#smallMultipleDiv" role="tab" aria-controls="smallMultipleDiv" aria-selected="false">Line</a>
-              </li>
-            </ul>
-
-            <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="radarPlotDiv" role="tabpanel" aria-labelledby="home-tab">
-                <div class="row">
-                  <div class="col-9 mt-2" id="radarDiv">
-                    <svg id="radar">
-                    </svg>
-                  </div>
-               <div id="radarLegendDiv" class="col-3 p-0">
-                 <svg id="radarLegend"></svg>
-               </div>
                 </div>
-              </div>
-              <div class="tab-pane fade" id="scatterConfigDiv" role="tabpanel" aria-labelledby="profile-tab">
-                <div id="config-scatter" class="config p-4">
-                  <div class="form-group container m-0 p-0">
-                    <div class="row p-0">
-                      <div class="col-3 m-0">
-                        <label for="granularity">Gran.</label>
-                      </div>
-                      <div class="col-4 m-0">
-                        <select class="form-control form-control-sm" id="granularity">
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group container m-0">
-                    <div class="row p-0">
-                      <div class="col-1 m-0 p-0">
-                        <label for="xaxis">X</label>
-                      </div>
-                      <div class="col-5 m-0 p-0">
-                        <select class="form-control form-control-sm" id="xaxis">
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group container m-0">
-                    <div class="row">
-                      <div class="col-1 m-0 p-0">
-                        <label for="axis">Y</label>
-                      </div>
-                      <div class="col-5 m-0 p-0">
-                        <select class="form-control form-control-sm" id="yaxis">
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-                  <p id="selectedNodeList" style="font-size: 1rem">Selected Nodes: &nbsp</p>
-                  <p id="selectedLinkList" style="font-size: 1rem">Selected Links: &nbsp</p>
-                  <div style="text-align: center;" class="row">
-                    <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="launchScatter">Compare Nodes</button></div>
-                    <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="launchScatter2">Compare Edges</button></div>
-
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane fade" id="scatterPlot" role="tabpanel" aria-labelledby="profile-tab">
-                <svg id="scatter">
-                </svg>
-              </div>
-              <div class="tab-pane fade" id="smallMultipleDiv" role="tabpanel" aria-labelledby="profile-tab">
-                <svg id="smallMultiple">
-                </svg>
               </div>
             </div>
+            <div class="tab-pane fade" id="scatterConfigDiv" role="tabpanel" aria-labelledby="profile-tab">
+              <div id="config-scatter" class="config p-4">
+                <div class="form-group container m-0 p-0">
+                  <div class="row p-0">
+                    <div class="col-3 m-0">
+                      <label for="granularity">Gran.</label>
+                    </div>
+                    <div class="col-4 m-0">
+                      <select class="form-control form-control-sm" id="granularity">
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group container m-0">
+                  <div class="row p-0">
+                    <div class="col-1 m-0 p-0">
+                      <label for="xaxis">X</label>
+                    </div>
+                    <div class="col-5 m-0 p-0">
+                      <select class="form-control form-control-sm" id="xaxis">
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group container m-0">
+                  <div class="row">
+                    <div class="col-1 m-0 p-0">
+                      <label for="axis">Y</label>
+                    </div>
+                    <div class="col-5 m-0 p-0">
+                      <select class="form-control form-control-sm" id="yaxis">
+                      </select>
+                    </div>
+                  </div>
+                </div>
+                <p id="selectedNodeList" style="font-size: 1rem">Selected Nodes: &nbsp</p>
+                <p id="selectedLinkList" style="font-size: 1rem">Selected Links: &nbsp</p>
+                <div style="text-align: center;" class="row">
+                  <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="launchScatter">Compare Nodes</button></div>
+                  <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="launchScatter2">Compare Edges</button></div>
 
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="scatterPlot" role="tabpanel" aria-labelledby="profile-tab">
+              <svg id="scatter">
+              </svg>
+            </div>
+            <!-- <div class="tab-pane fade" id="smallMultipleDiv" role="tabpanel" aria-labelledby="profile-tab">
+              <svg id="smallMultiple">
+              </svg>
+            </div> -->
           </div>
+
         </div>
-      </div>
     </div>
+        </div>
+  </div>
+
+  <div id="heatmapFrame">
+  </div>
   </div>
 
 </body>
 <script>
-$(document).ready(function() {
-  let slider_width = $('.pollSlider').width()//get width automaticly
-  $('#pollSlider-button').click(function() {
-      if ($(this).css("margin-left") == slider_width+"px" && !$(this).is(':animated')) {
-          $('.pollSlider,#pollSlider-button').animate({"margin-left": '-='+slider_width})
-      }
-      else {
+  $(document).ready(function() {
+    let slider_width = $('.pollSlider').width() //get width automaticly
+    $('#pollSlider-button').click(function() {
+      if ($(this).css("margin-left") == slider_width + "px" && !$(this).is(':animated')) {
+        $('#styleConfigDiv,#pollSlider-button').animate({
+          "margin-left": '-=' + slider_width
+        })
+      } else {
         if (!$(this).is(':animated')) {
-          $('.pollSlider,#pollSlider-button').animate({"margin-left": '+='+slider_width})
+          $('#styleConfigDiv,#pollSlider-button').animate({
+            "margin-left": '+=' + slider_width
+          })
         }
       }
+    })
+
+    $('#pollSlider-button-selection').click(function() {
+      if ($(this).css("margin-left") == slider_width + "px" && !$(this).is(':animated')) {
+        $('#selectionConfigDiv,#pollSlider-button-selection').animate({
+          "margin-left": '-=' + slider_width
+        })
+      } else {
+        if (!$(this).is(':animated')) {
+          $('#selectionConfigDiv,#pollSlider-button-selection').animate({
+            "margin-left": '+=' + slider_width
+          })
+        }
+      }
+    })
   })
-})
 </script>
 
 </html>
