--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="./lib/js/d3-lasso.min.js"></script>
   <script src="./lib/js/bootstrap.min.js"></script>
   <script src="./lib/js/mdb.min.js"></script>
+  <script src="./lib/js/d3-legend.js"></script>
 
 
 
