--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
       </div> -->
       <div class="col-8 wrapper">
-        <div id="timesliderFrame">
-        </div>
+        <!-- <div id="timesliderFrame">
+        </div> -->
         <!-- <div class="scrollbar scrollbar-sunny-morning thin" id="measureFrame"> -->
         <div id="measureFrame">
         </div>
@@ -117,13 +117,13 @@
       <div class="outer mt-2" id="scatterFrame">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active" id="scatter-config-tab" data-toggle="tab" href="#radarPlotDiv" role="tab" aria-controls="radarPlotDiv" aria-selected="true">Subgraph</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="scatter-config-tab" data-toggle="tab" href="#scatterConfigDiv" role="tab" aria-controls="scatterConfigDiv" aria-selected="false">Config</a>
+              <a class="nav-link active" id="scatter-config-tab" data-toggle="tab" href="#scatterConfigDiv" role="tab" aria-controls="scatterConfigDiv" aria-selected="true">Config</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="scatter-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="false">Scatter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="scatter-config-tab" data-toggle="tab" href="#radarPlotDiv" role="tab" aria-controls="radarPlotDiv" aria-selected="false">Subgraph</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" id="multiple-tab" data-toggle="tab" href="#smallMultipleDiv" role="tab" aria-controls="smallMultipleDiv" aria-selected="false">Line</a>
@@ -131,17 +131,8 @@
           </ul>
 
           <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="radarPlotDiv" role="tabpanel" aria-labelledby="home-tab">
-              <div class="row">
-                <div class="col-12 mt-2" id="radarDiv">
-                  <div class="custom-control custom-switch ml-2">
-  <input type="checkbox" class="custom-control-input" id="groupMeasure">
-  <label class="custom-control-label" for="groupMeasure">Launch</label>
-</div>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane fade" id="scatterConfigDiv" role="tabpanel" aria-labelledby="profile-tab">
+
+            <div class="tab-pane fade show active" id="scatterConfigDiv" role="tabpanel" aria-labelledby="profile-tab">
               <div id="config-scatter" class="config p-4">
                 <div class="form-group container m-0 p-0">
                   <div class="row p-0">
@@ -189,6 +180,16 @@
               <svg id="scatter">
               </svg>
             </div>
+            <div class="tab-pane fade show" id="radarPlotDiv" role="tabpanel" aria-labelledby="home-tab">
+              <div class="row">
+                <div class="col-12 mt-2" id="radarDiv">
+                  <div class="custom-control custom-switch ml-2">
+  <input type="checkbox" class="custom-control-input" id="groupMeasure">
+  <label class="custom-control-label" for="groupMeasure">Launch</label>
+</div>
+                </div>
+              </div>
+            </div>
             <!-- <div class="tab-pane fade" id="smallMultipleDiv" role="tabpanel" aria-labelledby="profile-tab">
               <svg id="smallMultiple">
               </svg>
@@ -200,8 +201,8 @@
         </div>
   </div>
 
-  <div id="heatmapFrame">
-  </div>
+  <!-- <div id="heatmapFrame">
+  </div> -->
   </div>
 
 </body>
