--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script src="./lib/js/datatables.min.js"></script>
   <script src="./lib/js/d3-legend.js"></script>
   <script src="./lib/js/require.js"></script>
+  <script src="./lib/js/bundle.js"></script>
   <script src="./src/js/dataConfigure.js"></script>
 
 
