--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                       </select>
                     </div>
                     <div class="col-1 m-1 p-0">
-                      <button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="addInputInterval">Add</button>
+                      <button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="addInputInterval"><i class="fas fa-plus-square"></i></button>
                     </div>
                   </div>
 
@@ -196,8 +196,8 @@
                   </div>
                 </div>
                 <div style="text-align: center;  position: absolute; bottom: 10px; width:100%;" class="row">
-                  <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="resetInterval">Apply</button></div>
-                  <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="restoreInterval">Reset</button></div>
+                  <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="resetInterval"><i class="fas fa-check-square"></i>Apply</button></div>
+                  <div class="col-6"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="restoreInterval"><i class="fas fa-undo"></i>Reset</button></div>
                 </div>
                 </div>
 
