--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script src="./lib/js/jquery-3.4.1.min.js"></script>
   <script src="./lib/js/jquery-ui.js"></script>
   <script src="./lib/js/popper.min.js"></script>
+  <script src="./lib/js/tinycolor.js"></script>
   <script src="./lib/js/d3.v5.min.js"></script>
   <script src="./lib/js/d3-lasso.min.js"></script>
   <script src="./lib/js/bootstrap.min.js"></script>
@@ -37,6 +38,7 @@
   <script src="./lib/js/require.js"></script>
   <script src="./lib/js/bundle.js"></script>
   <script src="./src/js/dataConfigure.js"></script>
+
 
 
   <div class="container m-0 p-0 wrapper" id="interface">
