--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
                 </div>
                 <div style="text-align: center;  position: absolute; bottom: 10px; width:100%;" class="row">
-                  <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="resetInterval"><i class="fas fa-vial"></i>Test</button></div>
+                  <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="testInterval"><i class="fas fa-vial"></i>Test</button></div>
                     <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="resetInterval"><i class="fas fa-check-square"></i>Apply</button></div>
                   <div class="col-4"><button type="button" class="btn btn-outline-info btn-sm z-depth-0 p-1 m-0" id="restoreInterval"><i class="fas fa-undo"></i>Reset</button></div>
                 </div>
