--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div id="interval-selection-display"></div>
                   </div>
                 </div>
-                <div id="fft-result-div" style="width:100%;">
+                <div id="fft-result-div" style="width:100%; min-height: 10vh;">
 
                 </div>
                 <div style="text-align: center;  position: absolute; bottom: 10px; width:100%;" class="row">
