--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="./lib/js/bootstrap.min.js"></script>
   <script src="./lib/js/mdb.min.js"></script>
   <script src="./lib/js/datatables.min.js"></script>
-  <script src="./lib/js/d3-legend.js"></script>
+  <!-- <script src="./lib/js/d3-legend.js"></script> -->
   <script src="./lib/js/require.js"></script>
   <script src="./lib/js/bundle.js"></script>
   <script src="./src/js/dataConfigure.js"></script>
@@ -166,7 +166,7 @@
         </div>
 
         <div class="outer mt-2" id="scatterFrame">
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" id="interval-config-tab" data-toggle="tab" href="#intervalConfigDiv" role="tab" aria-controls="intervalConfigDiv" aria-selected="true">Interval</a>
             </li>
@@ -176,10 +176,10 @@
             <li class="nav-item">
               <a class="nav-link" id="scatter-plot-tab" data-toggle="tab" href="#scatterPlot" role="tab" aria-controls="scatterPlot" aria-selected="false">Scatter</a>
             </li>
-            <!-- <li class="nav-item">
+           <li class="nav-item">
               <a class="nav-link" id="radar-plot-tab" data-toggle="tab" href="#radarPlotDiv" role="tab" aria-controls="radarPlotDiv" aria-selected="false">Subgraph</a>
-            </li> -->
-          </ul>
+            </li>
+          </ul> -->
 
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="intervalConfigDiv" role="tabpanel" aria-labelledby="interval-config-tab">
@@ -227,7 +227,7 @@
             </div>
 
 
-            <div class="tab-pane fade" id="scatterConfigDiv" role="tabpanel" aria-labelledby="scatter-config-tab">
+            <!-- <div class="tab-pane fade" id="scatterConfigDiv" role="tabpanel" aria-labelledby="scatter-config-tab">
               <div id="config-scatter" class="config p-4">
                 <div class="form-group container m-0 p-0">
                   <div class="row p-0">
@@ -274,7 +274,7 @@
             <div class="tab-pane fade" id="scatterPlot" role="tabpanel" aria-labelledby="scatter-plot-tab">
               <svg id="scatter">
               </svg>
-            </div>
+            </div> -->
             <!-- <div class="tab-pane fade" id="radarPlotDiv" role="tabpanel" aria-labelledby="radar-plot-tab">
               <div class="row">
                 <div class="col-12 mt-2" id="radarDiv">
