--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
             <div style="width:92%; border-bottom:lightgray solid 1px;"></div>
           <div id="config-style" class="ml-4 mr-3" style="line-height:initial;">
           </div>
+
           <div style="width:92%; border-bottom:lightgray solid 1px;margin-bottom:1px;margin-top:1px;"></div>
+          <div class="ml-4 mr-2">
+            <p class="m-0">Add-ons</p>
+          </div>
           <div id="config-view" class="ml-4 mr-2 scrollbar scrollbar-sunny-morning thin" style="line-height: initial;">
           </div>
               <div style="width:92%; border-bottom:lightgray solid 1px;margin-top:2px;margin-bottom:1px;"></div>
@@ -146,9 +150,16 @@
               <div style="width:92%; border-bottom:lightgray solid 1px; margin-bottom:1px;margin-top:4px;"></div>
           <!-- <div id="config-localMeasure" class="ml-4 mr-2">
           </div> -->
+          <div class="ml-4 mr-2">
+            <p class="m-0">Measure Visibility</p>
+          </div>
           <div id="config-measure" class="ml-4 mr-2 scrollbar scrollbar-sunny-morning thin" style="line-height: initial; height:15vh; overflow-y: scroll">
           </div>
+
               <div style="width:92%; border-bottom:lightgray solid 1px;margin-bottom:1px;margin-top:1px;"></div>
+              <div class="ml-4 mr-2">
+                <p class="m-0">Interval Visibility</p>
+              </div>
           <div id="config-bar" class="ml-4 mr-2 scrollbar scrollbar-sunny-morning thin" style="line-height: initial; height:15vh; overflow-y:scroll">
           </div>
         </div>
