--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <script src="./lib/js/mdb.min.js"></script>
   <script src="./lib/js/datatables.min.js"></script>
   <!-- <script src="./lib/js/d3-legend.js"></script> -->
-  <script src="./lib/js/require.js"></script>
-  <script src="./lib/js/bundle.js"></script>
+  <!-- <script src="./lib/js/require.js"></script>
+  <script src="./lib/js/bundle.js"></script> -->
   <script src="./lib/js/xlsx.full.min.js"></script>
   <!-- <script src="./lib/js/html2canvas.min.js"></script> -->
   <script src="./src/js/dataConfigure.js"></script>
