--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MeasuresFlow</title>
-  <meta name="description" content="Dynamic Network Visualization">
+  <title>MeasureFlow</title>
+  <meta name="description" content="An Interative Tool for Dynamic Network Visualization">
   <meta name="author" content="Liwenhan Xie, Benjamin Bach, Jean-Daniel Fekete">
   <link rel="icon" type="image/png" href="./asset/fig/vis-nodelink.png" />
   <link rel="stylesheet" href="./src/css/layout.css">
