--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     const session = 'demo'
     console.log('loading data: url', domain, dataFolder)
     let params = networkcube.getUrlVars()
-    if (!params['datasetName']) window.location.href = `${domain}?session=demo&datasetName=Scientists`
+    if (!params['datasetName']) window.location.href = `${domain}?session=demo&datasetName=Merchant`
   </script>
   <script type="module" src="./src/js/main.js"></script>
   <script src="./lib/js/jquery-3.4.1.min.js"></script>
